# bgl-shootout

./: CONTRIBUTING.md  Cargo.toml  README.md  pnpm-lock.yaml
.github/: .env  file-filters.yml
clients/js/: CONTRIBUTING.md  package.json  pnpm-lock.yaml
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  getProgram.test.ts
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: bgl_shootout.json
programs/bgl-shootout/: Cargo.toml
programs/bgl-shootout/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  util.rs
programs/bgl-shootout/src/instruction/: end_game.rs  mod.rs  play_round.rs  start_game.rs
programs/bgl-shootout/src/processor/: end_game.rs  mod.rs  play_round.rs  start_game.rs
programs/bgl-shootout/tests/: create.rs  end_game.rs  play_round.rs  start_game.rs
